syntax = "proto3";

package pbtbr;

option go_package = "bscp.io/pkg/protocol/core/template-binding-relation;pbtbr";

// TemplateBoundCounts is template bound counts.
message TemplateBoundCounts {
    uint32 template_id              = 1;
    uint32 bound_unnamed_app_count  = 2;
    uint32 bound_named_app_count    = 3;
    uint32 bound_template_set_count = 4;
}

// TemplateRevisionBoundCounts is template release bound counts.
message TemplateRevisionBoundCounts {
    uint32 template_revision_id    = 1;
    uint32 bound_unnamed_app_count = 2;
    uint32 bound_named_app_count   = 3;
}

// TemplateSetBoundCounts is template set bound counts.
message TemplateSetBoundCounts {
    uint32 template_set_id         = 1;
    uint32 bound_unnamed_app_count = 2;
    uint32 bound_named_app_count   = 3;
}

// TemplateBoundUnnamedAppDetail is template bound unnamed app detail.
message TemplateBoundUnnamedAppDetail {
    uint32 template_revision_id   = 1;
    string template_revision_name = 2;
    uint32 app_id                 = 3;
    string app_name               = 4;
}

// TemplateBoundNamedAppDetail is template bound named app detail.
message TemplateBoundNamedAppDetail {
    uint32 template_revision_id   = 1;
    string template_revision_name = 2;
    uint32 app_id                 = 3;
    string app_name               = 4;
    uint32 release_id             = 5;
    string release_name           = 6;
}

// TemplateBoundTemplateSetDetail is template bound unnamed app detail.
message TemplateBoundTemplateSetDetail {
    uint32 template_set_id   = 1;
    string template_set_name = 2;
}

// MultiTemplateBoundTemplateSetDetail is multiple templates bound unnamed app detail.
message MultiTemplateBoundTemplateSetDetail {
    uint32 template_id       = 1;
    string template_name     = 2;
    uint32 template_set_id   = 3;
    string template_set_name = 4;
}


// TemplateRevisionBoundUnnamedAppDetail is template release bound unnamed app detail.
message TemplateRevisionBoundUnnamedAppDetail {
    uint32 app_id   = 1;
    string app_name = 2;
}

// TemplateRevisionBoundNamedAppDetail is template release bound named app detail.
message TemplateRevisionBoundNamedAppDetail {
    uint32 app_id       = 1;
    string app_name     = 2;
    uint32 release_id   = 3;
    string release_name = 4;
}

// TemplateSetBoundUnnamedAppDetail is template set bound unnamed app detail.
message TemplateSetBoundUnnamedAppDetail {
    uint32 app_id   = 1;
    string app_name = 2;
}

// MultiTemplateSetBoundUnnamedAppDetail is template set bound unnamed app detail.
message MultiTemplateSetBoundUnnamedAppDetail {
    uint32 template_set_id   = 1;
    string template_set_name = 2;
    uint32 app_id            = 3;
    string app_name          = 4;
}

// TemplateSetBoundUnnamedAppDetail is template set bound named app detail.
message TemplateSetBoundNamedAppDetail {
    uint32 app_id       = 1;
    string app_name     = 2;
    uint32 release_id   = 3;
    string release_name = 4;
}

// LatestTemplateBoundUnnamedAppDetail is the latest template bound unnamed app detail.
message LatestTemplateBoundUnnamedAppDetail {
    uint32 template_set_id   = 1;
    string template_set_name = 2;
    uint32 app_id            = 3;
    string app_name          = 4;
}

